--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,26 @@ main{
     grid-template-columns: 1fr 4fr;
     border: solid 1px red;
     border-radius: 1.2rem;
-    padding: 2rem;
+    /* padding: 2rem; */
    
+}
+
+.left-panel{
+    border-right: 0.1rem solid red;
+    padding: 1.5rem 0.5rem 1.5rem 0.5rem;
+}
+
+fieldset{
+    border-radius: 0.5rem;
+}
+
+fieldset legend{
+   
+    text-align:left;
+    margin-left: 0.5rem;
+    padding: 0 0.2rem 0 0.2rem;
+}
+
+.choose-color > label{
+    display: block;
 }
