--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h1{
 
 main{
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 3fr;
     border: solid 1px red;
     border-radius: 1.2rem;
     /* padding: 2rem; */
@@ -55,4 +55,19 @@ fieldset legend{
 
 .choose-color > label{
     display: block;
+}
+
+.right-panel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 1rem 1rem 1rem;
+}
+
+.parent{
+    width: 32rem;
+    height: 32rem;
+    border-radius: 0.6rem;
+    border: solid red 0.1rem;
+
 }
