--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,16 @@ main{
 
 .left-panel{
     border-right: 0.1rem solid red;
-    padding: 1.5rem 0.5rem 1.5rem 0.5rem;
+    padding: 1rem 0.5rem 1rem 0.5rem;
+    display: grid;
+    align-items: stretch;
+    justify-content: center;
+    grid-template-columns: 1fr;
 }
 
 fieldset{
     border-radius: 0.5rem;
+    border: 0.2rem solid red;
 }
 
 fieldset legend{
@@ -65,8 +70,8 @@ fieldset legend{
 }
 
 .parent{
-    width: 32rem;
-    height: 32rem;
+    width: 100%;
+    height: 70vh;
     border-radius: 0.6rem;
-    border: solid red 0.1rem;
+    border: solid red 0.2rem;
 }
