--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,10 @@ main{
     border-right: 0.1rem solid red;
     padding: 1rem 0.5rem 1rem 0.5rem;
     display: grid;
-    align-items: stretch;
+    align-items: center;
     justify-content: center;
     grid-template-columns: 2fr;
-    width: 300px;
+    width: 200px;
 }
 
 fieldset{
@@ -68,7 +68,7 @@ fieldset legend{
     align-items: center;
     justify-content: center;
     padding: 1rem 1rem 1rem 1rem;
-    width: 500px;
+    /* width: 00px; */
 }
 
 .parent{
