--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 body {
     font-size: 62.5%;
     font-family: 'Glory', sans-serif;
+    background-color: #67568c;
 }
 
 h1 {
@@ -23,102 +24,223 @@ h1 {
     width: 85%;
     max-width: 960px;
     margin: 0 auto;
+    
 }
 
-.hero-text {}
+.hero-text {
+    color: #ffdf03;
+    text-align: center;
+}
+
+.hero-text h1{
+    text-shadow: 0 3px 4px rgba(0, 0, 0, 0.5);
+}
 
 main {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    border: solid 1px red;
+    background-color: #67568c;
     border-radius: 1.2rem;
-    /* padding: 2rem; */
+    padding: 1rem;
+    grid-gap: 1rem;
+    border: blue solid 2px;
+    width: 100%;
+    max-width: 600Px;
 
 }
 
-.left-panel {
+.sketch-pad-container {
+    grid-gap: 0.6rem;
     grid-column: span 1;
-    border-right: 0.1rem solid red;
-    padding-left: 0.3rem;
-    padding-right: 0.3rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 200px;
+    flex-direction: column;
+    padding: 1rem 1rem 1rem 1rem;
+    background-color: #ffdf03;
+    border-radius: 1.2rem;
+    border: #474742 solid 2px;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5), 1px 2px 2px rgba(0, 0, 0, 0.5), 0 2px 3px rgba(0, 0, 0, 0.5), 0 2px 8px rgba(0, 0, 0, 0.5);
+    border: greenyellow solid 2px;
 }
 
-.left-panel-content {
-    border: 0.1rem solid red;
-    border-top-left-radius: 0.6rem;
-    padding: 0 0.5rem 0 0.5rem;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 1fr);
+.sketch-pad {
+    width: 100%;
+    max-width: 560px;
+    height: 68vh;
+    border-radius: 0.6rem;
+    border: solid #474742 0.2rem;
+    background-color: rgb(240, 240, 240);
+    cursor: pointer;
+}
+
+.sketch-pad-tools {
+    
+    border-radius: 0.6rem;
+    padding: 0 0.5rem 0 2rem;
+    display: flex;
     align-items: center;
-    justify-content: center;
-    width: 200px;
-    height: 70vh;
+    justify-content: space-around;
+    width: inherit;
+    background-color: #9e9da127;
+    width: 100%;
+    max-width: 560px;
+    /* flex-wrap: wrap; */
 }
 
-.color-setting {
-    border: 0.1rem solid red;
+.color-tools{
+    flex: 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;   
 }
 
-.colors-schemes {
+.color-picker-label{
+    height: 2.2rem;
+    position: absolute;
+    left: 12px;
     display: flex;
     flex-direction: column;
+    align-content: center;
     justify-content: center;
-    align-items: center;
+    transition: transform 0.1s;
+    font-weight: 900;
+    color: #606060;
+}
+
+.color-picker-label:hover{
+    transform: scale(1.03);
+    color: #67568c;
+}
+
+.fas{
+    color: #606060;
+    display: inline-block;
+}
+
+.fas:hover{
+    color: #3a226d;
+    
+
 }
 
 #color-picker {
     position: relative;
     display: inline-block;
     cursor: pointer;
-    margin-top: 1rem;
     margin-bottom: 2rem;
+    outline: none;
+    outline-color: none;
+    background-color: none;
+    border: none;
+    border-image-width: 0;
+    width: 0px;
+    opacity: 0;
+    appearance: none;
+
 }
 
-#color-picker::before {
-    content: attr(data-tooltip);
-    position: absolute;
-    z-index: 99;
-    width: 4rem;
-    font-size: 0.6rem;
-    left: 2rem;
-    bottom: 1.1rem;
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
-    display: none;
-    border-radius: .2rem;
-    padding: 0.2rem;
+#color-picker i{
+    background-color: transparent;
 }
 
-#color-picker:hover:before {
-    display: block;
+.random-color{
+    display: flex;
+    flex-direction: column;
+    font-weight: 900;
+    color: #606060;
+    
 }
 
-.random,
-.erase {
-    margin-bottom: 2rem;
+.random-color:hover{
+    color: #3a226d;
+    transform: scale(1.02);
 }
 
-.grid-setting {
-    border: 0.1rem solid red;
+.random-icon{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    border: 2px solid #606060;
+    border-radius: 3px;
+    max-width: 36px;
+    align-self: center;
+   
+}
+
+.eraser{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    font-weight: 900;
+    cursor: pointer;
+    color: #606060;
+
+}
+
+.eraser:hover{
+    color: #3a226d;
+    transform: scale(1.02);
+}
+
+.erase-btn{
+    border: 2px solid #606060;
+    width:1.3rem;
+    height: 2rem;
+    border-radius: 3px;
+    border-bottom-right-radius:8px;
+    display: flex;
+    position: relative;
+    transform: rotate(45deg);
+    margin-left: 0.5rem;
+    
+}
+
+.erase-btn span{
+    display: inline-block;
+    width: inherit;
+    height: 1rem;
+    background-color: #606060;
+}
+
+.eraser span{
+    text-align: center;
+}
+
+
+.colors{
+    width: 1rem;
+    height: 1rem;
+    border: 1px solid #606060;
+}
+
+.first{background-color: blue;}
+.second{background-color:greenyellow;}
+.third{background-color: #fec7d7;}
+.fourth{background-color: #c3f0ca;}
+
+.grid-tools{
+    flex: 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.grid-controls {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 2rem 0 2rem 0;
+    justify-content: center;
+    flex: 1.5;
 }
 
-.slider-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
+.slider-controls{
+    margin-left: 1.5rem;
+
 }
 
 .decrement-slider,
@@ -126,84 +248,177 @@ main {
     padding: 0 .3rem;
     display: inline-block;
     font-size: 0.8rem;
-    font-weight: 800;
-    /* margin-top: 1rem; */
+    font-weight: 900;
+  
     margin-bottom: 1rem;
     position: relative;
     top: -4px;
+    background-color: transparent;
+    border: #606060 solid 2px;
+    border-radius: 3px;
+    color: #606060;
+    cursor: pointer;
+    transition: transform 0.2s;
 }
 
 .decrement-slider {
     margin-right: 0.3rem;
 }
 
+.decrement-slider:hover, 
+.increment-slider:hover{
+    border-color: #3a226d;
+    transform: scale(1.05);
+}
+
+.decrement-slider:hover{
+    color: #f53834;
+}
+
+.increment-slider:hover{
+    color: green;
+}
+
 .increment-slider {
     margin-left: 0.3rem;
 }
 
-.slider-value {
+.display-number-of-grids {
     display: inline-block;
-    padding: 0 2rem 0rem 2rem;
-    /* border: 0.1rem solid red; */
-    margin-bottom: .4rem;
-    font-size: 1rem;
+    padding: 0.5rem 0.5rem 0rem 0.5rem;
+    font-size: 0.8rem;
+    font-weight: 600;
+    text-align: center;
 
 }
 
 .range-slider {
-    width: 5.5rem;
-    margin-bottom: 2.5rem;
-    margin-top: 1rem;
+    appearance: none;
+    width: 50%;
+    margin-top: 0.5rem;
+    cursor: pointer;
+    border-radius: 999px;
+    height: 0.3rem;
+    outline: none;
+    position: relative;
+    top: -4px;
+    
 }
 
-.reset-btn {}
+.range-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%; 
+    background: #67568c;
+    cursor: pointer;
+  }
 
-.right-panel {
-    grid-column: span 1;
+  .range-slider::-moz-range-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%; 
+    background: #67568c;
+    cursor: pointer;
+  }
+
+.reset-control{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-weight: 900;
+    cursor: pointer;
+    color: #606060;
+}
+
+
+.reset-control:hover{
+    color: #3a226d;
+    transform: scale(1.03);
+}
+
+.footer{
     display: flex;
     align-items: center;
-    justify-content: center;
-    padding: 1rem 1rem 1rem 1rem;
+    justify-content: space-around;
+    color: #ffdf03;
+    flex-wrap: wrap;
 }
 
-.parent {
-    width: 560px;
-    /* min-width: 15rem; */
-    height: 70vh;
-    border-radius: 0.6rem;
-    border: solid red 0.2rem;
-    cursor: pointer;
+.footer span{
+    font-size: 1rem;
+   
 }
+
+.made-by{
+    /* border: 1px solid red; */
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.social{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    /* border: 1px solid red; */
+    flex: 1;
+    margin-left: 1rem;
+}
+
+.social a{
+    text-decoration: none;
+    font-size: 1.3rem;
+    color: #ffdf03;
+}
+
+.social :not(:first-child){
+    margin-left: 1.2rem;
+    
+}
+
+.fab:hover{
+    color: #fff;   
+}
+
+.social a:visited{
+    color: #ffdf03;
+    
+}
+
+
+
 
 
 
 @media(max-width:805px) {
-    .parent {
-        width: 100%;
-        min-width: 360px;
-        height: 60vh;
+    .sketch-pad {
     }
 
-    .left-panel-content {
-        width: 100%;
-        min-width: 160px;
-        height: 60vh;
-    }
+
 
 }
 
 @media(max-width:625px) {
     main {
-        grid-template-columns: 1fr;
-        grid-template-rows: 3fr 1fr;
-        border: solid 1px red;
+        
 
+    }.parent {
+        height: 55vh;
     }
+
+
 
     .right-panel {
         grid-row: 1/2;
         grid-column: 1/2;
         padding-bottom: 0;
+        border-radius: 0;
 
     }
 
