--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ h1 {
 .hero-text {
     color: #ffdf03;
     text-align: center;
+    margin-top: 1rem;
 }
 
 .hero-text h1{
@@ -43,15 +44,15 @@ main {
     background-color: #67568c;
     border-radius: 1.2rem;
     padding: 1rem;
+    padding-top: 00.5rem;
     grid-gap: 1rem;
-    border: blue solid 2px;
     width: 100%;
     max-width: 600Px;
 
 }
 
 .sketch-pad-container {
-    grid-gap: 0.6rem;
+    grid-gap: 0.5rem;
     grid-column: span 1;
     display: flex;
     align-items: center;
@@ -62,13 +63,12 @@ main {
     border-radius: 1.2rem;
     border: #474742 solid 2px;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5), 1px 2px 2px rgba(0, 0, 0, 0.5), 0 2px 3px rgba(0, 0, 0, 0.5), 0 2px 8px rgba(0, 0, 0, 0.5);
-    border: greenyellow solid 2px;
 }
 
 .sketch-pad {
     width: 100%;
     max-width: 560px;
-    height: 68vh;
+    height: 67vh;
     border-radius: 0.6rem;
     border: solid #474742 0.2rem;
     background-color: rgb(240, 240, 240);
@@ -92,7 +92,7 @@ main {
 .color-tools{
     flex: 1;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     position: relative;   
 }
@@ -100,7 +100,7 @@ main {
 .color-picker-label{
     height: 2.2rem;
     position: absolute;
-    left: 12px;
+    left: -10px;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -108,6 +108,7 @@ main {
     transition: transform 0.1s;
     font-weight: 900;
     color: #606060;
+    text-align: center;
 }
 
 .color-picker-label:hover{
@@ -118,6 +119,7 @@ main {
 .fas{
     color: #606060;
     display: inline-block;
+    font-size: 1.8rem;
 }
 
 .fas:hover{
@@ -139,6 +141,7 @@ main {
     width: 0px;
     opacity: 0;
     appearance: none;
+    z-index: -33;
 
 }
 
@@ -151,6 +154,7 @@ main {
     flex-direction: column;
     font-weight: 900;
     color: #606060;
+    margin-left: 1.2rem;
     
 }
 
@@ -227,6 +231,7 @@ main {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 100%;
 }
 
 
@@ -235,11 +240,12 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex: 1.5;
+    flex: 2;
+    text-align: center;
 }
 
 .slider-controls{
-    margin-left: 1.5rem;
+    /* margin-left: 1.5rem; */
 
 }
 
@@ -285,10 +291,11 @@ main {
 
 .display-number-of-grids {
     display: inline-block;
-    padding: 0.5rem 0.5rem 0rem 0.5rem;
+    padding: 0.5rem 0 0rem 0.5rem;
     font-size: 0.8rem;
     font-weight: 600;
-    text-align: center;
+    /* text-align: center; */
+    width: 100%;
 
 }
 
@@ -396,104 +403,113 @@ main {
 
 
 
-@media(max-width:805px) {
-    .sketch-pad {
+@media(max-width:675px) {
+    .sketch-pad{
+        height: 60vh;
     }
+    .sketch-pad-tools {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .color-tools{
+        justify-content: space-around;
+        flex: 1;
+        width: 100%;
+        
+    }
+
+    .grid-tools{
+        justify-content: space-around;
+        flex: 1;
+        width: 100%;
+    }
+
+    
 
 
 
 }
 
-@media(max-width:625px) {
-    main {
-        
+@media(max-width:400px) {
+    h1{
+        font-size: 2rem;
+    }
 
-    }.parent {
+    
+    .sketch-pad{
         height: 55vh;
+        /* min-width: 330px; */
     }
 
-
-
-    .right-panel {
-        grid-row: 1/2;
-        grid-column: 1/2;
-        padding-bottom: 0;
-        border-radius: 0;
-
+    .color-tools, .grid-tools{
+        font-size: 0.6rem;
     }
 
-    .left-panel {
-        grid-row: 2/3;
-        grid-column: 1/2;
-        width: 400px;
-        border-right: none;
+    .fas{
+        font-size: 1rem;
     }
 
-    .left-panel-content {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        height: 20vh;
-
+    .colors{
+        width: 0.6rem;
+        height: 0.6rem;
 
     }
 
-    .colors-schemes {
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-
-
+    .erase-btn{
+        border: 2px solid #606060;
+        width:0.8rem;
+        height: 1.3rem;
+    }
+    
+    .erase-btn span{
+        height: 0.5rem;
+        
+    }
+    
+    .footer{
+        flex-direction: column-reverse;
     }
 
-    .choose-color {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        flex: 2 1
+    .grid-controls{
+        flex: 2;
     }
 
-    .pick-color {
-        display: inline-block;
-        /* flex:1 1 */
+    .decrement-slider,.increment-slider{
+        /* display:none ; */
+        font-size: 0.6rem;
+        padding: 0.2rem;
     }
 
-    .erase {
-        flex: 1 1;
+    .range-slider{
+        /* width: 50%; */
     }
 
-    .random,
-    .erase,
-    #color-picker {
-        margin-bottom: 0.5rem;
+    .reset-control{
+        flex: 1;
     }
 
-    #color-picker {
-        margin-top: 0;
+    .social{
+        margin-left: 0;
+        justify-content: center;
     }
 
-    .grid-setting {
-        flex-direction: column;
-        padding: 0;
+    
+       
+ 
+}
+
+@media(max-width:330px){
+    .sketch-pad-container{
+        min-width: 230px;
     }
 
-    .grid-tools {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: red;
-        width: 100%;
+    .sketch-pad{
+        height: 45vh;
     }
 
-    .range-slider {
-        margin-bottom: 0;
-
-
-    }
-
-    .slider-value {
-        padding: 0;
-        margin-bottom: .4rem;
-        font-size: 0.8rem;
-
+    .color-tools, .grid-tools{
+        font-size: 0.5rem;
     }
 }
