--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ main {
     transition: transform 0.1s;
     font-weight: 900;
     color: #606060;
-    text-align: center;
+    text-align: center;cursor: pointer;
 }
 
 .color-picker-label:hover{
@@ -154,6 +154,7 @@ main {
     font-weight: 900;
     color: #606060;
     margin-left: 1.2rem;
+    cursor: pointer;
     
 }
 
